Added header class to header tags in index.html and added styling to the class in style.css along with content changes at the 980px media breakpoint

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="header-background">
 
-            <header class="content">
+            <header class="header">
                 
                 <h1 id="name">Jake Dudum</h1>
 
