--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
             <br><hr><br>
 
             <article class="imgLink alignLeft">
-                <a href="#"><img src="assets/Images/placeholder-1.jpg"></a>
-                <p class="imgLinkName">Placeholder-1</p>
+                <a href="https://jakedudum.github.io/Word-Guess-Game/"><img src="assets/Images/hangman.jpg"></a>
+                <p class="imgLinkName">Hangman</p>
             </article>
 
             <article class="imgLink alignRight">
