Updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,23 +38,28 @@
             </article>
 
             <article class="imgLink alignRight">
-                <a href="#"><img src="assets/Images/placeholder-2.jpg"></a>
-                <p class="imgLinkName">Placeholder-2</p>
+                <a href="https://jakedudum.github.io/unit-4-game/"><img src="assets/Images/RPG.png"></a>
+                <p class="imgLinkName">Webbrowser RPG</p>
             </article>
 
             <article class="imgLink alignLeft">
-                <a href="#"><img src="assets/Images/placeholder-3.jpg"></a>
-                <p class="imgLinkName">Placeholder-3</p>
+                <a href="https://jakedudum.github.io/TriviaGame/"><img src="assets/Images/triviagame.png"></a>
+                <p class="imgLinkName">Trivia Game</p>
             </article>
 
             <article class="imgLink alignRight">
-                <a href="#"><img src="assets/Images/placeholder-4.jpg"></a>
-                <p class="imgLinkName">Placeholder-4</p>
+                <a href="https://jakedudum.github.io/GifTastic/"><img src="assets/Images/giftastic.png"></a>
+                <p class="imgLinkName">GifTastic</p>
             </article>
 
             <article class="imgLink alignLeft">
-                <a href="#"><img src="assets/Images/placeholder-5.jpg"></a>
-                <p class="imgLinkName">Placeholder-5</p>
+                <a href="https://jakedudum.github.io/RPS-Multiplayer/"><img src="assets/Images/RPS-Multiplayer.png"></a>
+                <p class="imgLinkName">RPS-Multiplayer</p>
+            </article>
+
+            <article class="imgLink alignRight">
+                <a href="https://jakedudum.github.io/Where2p/"><img src="assets/Images/Where2P.PNG"></a>
+                <p class="imgLinkName">Where2P</p>
             </article>
 
             <div class="clearfix"></div>
