Updated portfolio and contact pages

--- a/contact.html
+++ b/contact.html
@@ -32,19 +32,14 @@
 
             <br><hr><br>
 
-            <form action="#">
-
-                <h2>Name</h2><br>
-                <input class="data" type="text" name="Name"><br><br>
-
-                <h2>Email</h2><br>
-                <input class="data" type="text" name="Email"><br><br>
-
-                <h2>Message</h2><br>
-                <textarea class="message" type="text" name="Message"></textarea><br><br>
-
-                <input id="submit" type="button" value="Submit">
-            </form>
+            <h2>LinkedIn</h2>
+            <a href="https://www.linkedin.com/in/jake-dudum-45a967185/">Jake Dudum</a>
+            <br><br>
+            <h2>Github</h2>
+            <a href="https://github.com/JakeDudum">Repository</a>
+            <br><br>
+            <h2>E-mail</h2>
+            <p>jakedudum@gmail.com</p>
         </section>
     </div>
 
