--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,9 @@
 
             <br><hr><br>
 
+            <h2>Deployed Sites</h2>
+            <br><br>    
+
             <article class="imgLink alignLeft">
                 <a href="https://jakedudum.github.io/Word-Guess-Game/"><img src="assets/Images/hangman.jpg"></a>
                 <p class="imgLinkName">Hangman</p>
@@ -64,6 +67,19 @@
 
             <div class="clearfix"></div>
 
+            <h2>Github Code</h2>
+            <br><br>
+            <a href="https://github.com/JakeDudum/Word-Guess-Game">Hangman</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/unit-4-game">Webbrowser RPG</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/TriviaGame">Trivia Game</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/GifTastic">Hangman</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/RPS-Multiplayer">RPS-Multiplayer</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/Where2p">Where2P</a>
         </section>
     </div>
 
