--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,11 @@
                 <p class="imgLinkName">Where2P</p>
             </article>
 
+            <article class="imgLink alignLeft">
+                <a href="https://github.com/JakeDudum/liri-node-app"><img src="assets/Images/placeholder-5.jpg"></a>
+                <p class="imgLinkName">Liri-Bot</p>
+            </article>
+
             <div class="clearfix"></div>
 
             <h2>Github Code</h2>
@@ -80,6 +85,8 @@
             <a href="https://github.com/JakeDudum/RPS-Multiplayer">RPS-Multiplayer</a>
             <br><br>
             <a href="https://github.com/JakeDudum/Where2p">Where2P</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/liri-node-app">Liri-Bot</a>
         </section>
     </div>
 
