--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,12 @@
 
             <article class="imgLink alignLeft">
                 <a href="https://github.com/JakeDudum/liri-node-app"><img src="assets/Images/placeholder-5.jpg"></a>
-                <p class="imgLinkName">Liri-Bot</p>
+                <p class="imgLinkName">Liri-Bot(node app)</p>
+            </article>
+
+            <article class="imgLink alignRight">
+                <a href="https://github.com/JakeDudum/Bamazon"><img src="assets/Images/placeholder-1.jpg"></a>
+                <p class="imgLinkName">Bamazon(node app)</p>
             </article>
 
             <div class="clearfix"></div>
@@ -87,6 +92,8 @@
             <a href="https://github.com/JakeDudum/Where2p">Where2P</a>
             <br><br>
             <a href="https://github.com/JakeDudum/liri-node-app">Liri-Bot</a>
+            <br><br>
+            <a href="https://github.com/JakeDudum/Bamazon">Bamazon</a>
         </section>
     </div>
 
